--- a/i3/config
+++ b/i3/config
@@ -109,7 +109,7 @@ set $ws6  " "
 set $ws7  " "
 set $ws8  " "
 set $ws9  " "
-set $ws10  " "
+set $ws10  " "
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
