--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -132,7 +132,7 @@ set display_size_in_status_bar true
 set display_tags_in_all_columns true
 
 # Set a title for the window?
-set update_title false
+set update_title true
 
 # Set the title to "ranger" in the tmux program?
 set update_tmux_title false
@@ -200,7 +200,6 @@ set cd_bookmarks true
 set cd_tab_case insensitive
 
 # Use smart tab completion with less typing? E.g. ":cd /f/b/b<tab>" yields ":cd /foo/bar/baz".
-set cd_tab_smart true
 
 # Avoid previewing files larger than this size, in bytes.  Use a value of 0 to
 # disable this feature.
@@ -660,3 +659,4 @@ map gqT edit ~/.config/termite/config
 map gqz edit ~/.zshrc
 map gqt edit ~/.tmux.conf
 map gqi edit ~/.config/i3/config
+map ef shell unp %f
