--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -270,6 +270,7 @@ alias travel     scout -aefklst
 
 # Basic
 map     Q quitall!
+map br bulkrename
 map     q quit
 copymap q ZZ ZQ
 
@@ -646,6 +647,7 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 ## CUSTOM AREA
 map ,f fzf_select
+map ,s shell ./%f
 map gcs shell wal -t -i %f
 map gsp shell rtmpdump -r $(<%f) -o test.mp4
 map gas cd /var/www/sig-arteris
