--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -648,7 +648,8 @@ copytmap <ESC> q Q w <C-c>
 ## CUSTOM AREA
 map ,f fzf_select
 map ,s shell ./%f
-map gcs shell wal -t -i %f
+map gcs shell wal -i %f -o "$HOME/HD/Pictures/Wallpapers/restart.sh"
+ 
 map gsp shell rtmpdump -r $(<%f) -o test.mp4
 map gas cd /var/www/sig-arteris
 map gts cd /var/www/tic-sms
