--- a/i3_bumblebee/.travis.yml
+++ b/i3_bumblebee/.travis.yml
@@ -6,6 +6,9 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y task
 install:
   - pip install i3ipc
   - pip install psutil
@@ -13,6 +16,7 @@ install:
   - pip install pyyaml
   - pip install -U coverage==4.3
   - pip install codeclimate-test-reporter
+  - pip install taskw
 script:
   - nosetests -v --with-coverage --cover-erase tests/
   - CODECLIMATE_REPO_TOKEN=40cb00907f7a10e04868e856570bb997ab9c42fd3b63d980f2b2269433195fdf codeclimate-test-reporter
