--- a/polybar/config
+++ b/polybar/config
@@ -126,7 +126,7 @@ ws-icon-3 = ";"
 ws-icon-4 = ";"
 ws-icon-5 = ";"
 ws-icon-6 = ";"
-ws-icon-7 = " ;"
+ws-icon-7 = ";"
 ws-icon-8 = ";"
 ws-icon-9 = ";"
 
