master | updates de rotina kek

--- a/polybar/config
+++ b/polybar/config
@@ -251,7 +251,7 @@ format-disconnected =
 type = internal/date
 interval = 5
 
-date =
+date = " %d/%m/%Y | "
 date-alt = " %Y-%m-%d"
 
 time = %H:%M
