master | alguns tapinhas no vimrc e uma gambi inexplicável pra funcionarem as abas do rxvt

--- a/i3/config
+++ b/i3/config
@@ -310,6 +310,6 @@ bar {
             }
         }
 
-exec --no-startup-id compton -b
+# exec --no-startup-id compton -b
 exec --no-startup-id nm-applet
 
