--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -87,7 +87,7 @@ set preview_images true
 # * urxvt-full:
 #   The same as urxvt but utilizing not only the preview pane but the
 #   whole terminal window.
-set preview_images_method urxvt
+set preview_images_method w3m
 
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis false
@@ -102,7 +102,7 @@ set colorscheme default
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
 set preview_files true
-set preview_directories true
+set preview_directories false
 set collapse_preview true
 
 # Save the console history on exit?
@@ -122,7 +122,7 @@ set draw_borders false
 set dirname_in_tabs true
 
 # Enable the mouse support?
-set mouse_enabled true
+set mouse_enabled false
 
 # Display the file size in the main column or status bar?
 set display_size_in_main_column true
@@ -650,13 +650,11 @@ map ,f fzf_select
 map ,s shell ./%f
 map gcs shell wal -i %f -o "$HOME/HD/Pictures/Wallpapers/restart.sh"
  
-map gsp shell rtmpdump -r $(<%f) -o test.mp4
+map gsp shell rtmpdump -r $(<%f) -o %f.mp4
 map gas cd /var/www/sig-arteris
-map gts cd /var/www/tic-sms
 map gtt cd ~/HD/Torr/
 map gaa cd /var/www/api-arteris
 map gqr edit ~/.config/ranger/rc.conf
-map gqp edit ~/.config/polybar/config
 map gqv edit ~/.vimrc
 map gqT edit ~/.config/termite/config
 map gqz edit ~/.zshrc
