--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -648,7 +648,9 @@ copytmap <ESC> q Q w <C-c>
 ## CUSTOM AREA
 map ,f fzf_select
 map ,s shell ./%f
-map gcs shell wal -i %f -o "$HOME/HD/Pictures/Wallpapers/restart.sh"
+map gcs0 shell wal -i %f -o "$HOME/HD/Pictures/Wallpapers/restart.sh"
+map gcs1 shell wal --backend colorthief -i %f -o "$HOME/HD/Pictures/Wallpapers/restart.sh"
+map gcs2 shell wal --backend colorz -i %f -o "$HOME/HD/Pictures/Wallpapers/restart.sh"
  
 map gsp shell rtmpdump -r $(<%f) -o %f.mp4
 map gas cd /var/www/sig-arteris
@@ -661,3 +663,4 @@ map gqz edit ~/.zshrc
 map gqt edit ~/.tmux.conf
 map gqi edit ~/.config/i3/config
 map ef shell unp %f
+map bg shell feh --bg-scale %f; cp %f ~/wallpaper.png
